--- a/项目说明书.md
+++ b/项目说明书.md
@@ -56,12 +56,11 @@
 
 - 新建项目，虚拟环境选择python3版本，创建 `manage.py` 文件
 
-  ＇＇＇
-
   ```
   from flask import Flask
 
   app=Flask(__name__)
+  ```
 
 
   @app.route('/index')
@@ -74,4 +73,25 @@
       app.run()
   ```
 
-  ＇＇＇
+  - 定义配置的类,并加载配置
+
+  ```
+    class Config(object):
+        '''工程配置文件'''
+        DEBUG=True
+
+
+    app.config.from_object(Config)
+
+    ​```
+
+    因要连接数据库,而本机无法提供数据库服务.因此选择本地开发,远程编译运行.又jenkins来管理构建远程项目.一旦本地有项目提交.远端就进行更新代码重新启动项目.
+    采用docker启动jenkins
+    # docker run --name=prjject_manage -p 5005:8080 -v :/data jenkins 
+    查看jenkins初始密码,通过容器日志查看,如下命令查看最后30行日志,如果不关闭,将会实时刷新命令.
+    #docker logs -f -t --tail 30 prjject_manage
+    发现Administrators密码是b7b7cd4e6cf0435992192a88a9b1dc6f
+    设置用户名:admin 密码:admin123 全名王登开 邮箱wangdengkaiwy@163.com
+    
+
+
