--- a/项目说明书.md
+++ b/项目说明书.md
@@ -92,6 +92,26 @@
     #docker logs -f -t --tail 30 prjject_manage
     发现Administrators密码是b7b7cd4e6cf0435992192a88a9b1dc6f
     设置用户名:admin 密码:admin123 全名王登开 邮箱wangdengkaiwy@163.com
+    如果jenkins停止了,采用该命令可以启动
+    #docker start prjject_manage
     
+    配置的jitHub  person access token :1ab78e222461c04a6c980ccdb66d45f89a55cd6f
+    
+
+项目目录设计
+
+```
+
+- poqiu  (git 仓库目录)
+  - code   (git 项目代码目录)
+    - html  (前端模块代码)
+    - user  (用户模块代码)
+  - manage.py  项目启动脚本
+  - Dockerfile  
+  - docker-compose.yml
+
+所有代码让jenkins自动触发自动拉取.
+```
+
 
 
